--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.datasource.url=jdbc:mysql://${MYSQL_MASTER_SERVICE_HOST}:3306/shop?useUnicode=true&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull&useSSL=true&allowMultiQueries=true&serverTimezone=Asia/Hong_Kong
 spring.datasource.username=root
-spring.datasource.password=xiaomi0000
+spring.datasource.password=******
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 
